--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "unirest": "^0.5.1"
   },
   "standard": {
-    "globals": ["$", "alert"]
+    "globals": [
+      "$",
+      "alert"
+    ]
   }
 }
